--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,24 +1,99 @@
-*{
-font-family: 'Courier New', Courier, monospace;
-font-size: 18px;
+:root{
+    --dark-theme: rgb(255, 0, 0);
+    --light-theme: #fff;
+    --standard-margin: 15px;
+    --large-margin: 25px;
+    --very-large-margin: 35px;
+    --large-font: 27px;
+}
+
+* { 
+font-family: 'Courier New', Courier, monarticle
 }
 
 header {
-    display: inline;
-}
-
-body {
-    background-color: beige;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    background-color: var(--dark-theme);
+    margin: 30px;
+    padding: 30px;
 }
 
 h1{
-    font-size: 200%;
+    font-size: 250%;
     font-weight: bolder;
-    margin: 15px 15px 15px 15px;
+    margin: var(--large-margin);
 }
 
 h2 {
-    font-size: 150%;
+    font-size: 200%;
     font-weight: bold;
+    display: block;
+    margin: 35px;
+}
+
+nav a{
+    color: var(--light-theme);
+    font-size: var(--large-font);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+nav a:hover{
+    color: black;
+}
+
+nav ul li{
+    display: flex;
+    float: right;
+    margin-right: var(--standard-margin);
+    margin-left: var(--standard-margin);
+    margin-top: 20px;
+    
+}
+
+body {
+    background-color: rgb(0, 0, 0);
+    color: var(--light-theme);
+}
+
+
+article#About-Me div{
+margin-left: var(--very-large-margin);
+margin-right: var(--very-large-margin);
+}
+
+article#About-Me {
+    display: flex;
+    font-size: 23px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-right: var(--large-margin);
+}
+
+section.main-content{
+    display: flex;
+    flex-direction: column
+}
+
+section.main-content img{
+    display: flex;
+    margin: var(--very-large-margin);
+    
+}
+
+section.main-content li{
+    padding-left: var(--very-large-margin);
+    font-size: var(--large-font);
+}
+
+footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--dark-theme);
+    color: var(--light-theme);
+    text-align: center;
 }
 
